# vision_locomotion

./: README.md  dependencies.yaml  index.html
controller/: CMakeLists.txt  package.xml
controller/include/agile_locomotion/: agile_locomotion.h  comm.lcm  cpp_policy.h  lcm_server.h  low_level.h  udp.h
controller/include/agile_locomotion/lcmcomm/: Cartesian.hpp  HighCmd.hpp  HighState.hpp  IMU.hpp  LED.hpp  LowCmd.hpp  LowState.hpp  MotorCmd.hpp  MotorState.hpp
controller/launch/: cms_ros.launch  d435_only.launch
controller/models/: .gitignore
controller/models/blind/: mlp_1200.pt
controller/models/vision/: prop_encoder_1200.pt
controller/parameters/: default.yaml
controller/src/: agile_locomotion.cpp  cpp_policy.cpp  low_level.cpp
data/: .gitignore
media/: mount.stl
utils/: CMakeLists.txt  package.xml
utils/include/utils/: logging.h
utils/src/: logging.cpp
visual_locomotion/learning/: .gitignore  CMakeLists.txt  package.xml  setup.py  train.py
visual_locomotion/learning/config/: config.py  test_config.yaml  train_config.yaml
visual_locomotion/learning/model/: all.yaml
visual_locomotion/learning/nodes/: tester_node.py
visual_locomotion/learning/scripts/: analysis.py
visual_locomotion/learning/src/Architecture/models/: arch_squeezenet.py  dataset.py  learner.py  normalization.py
visual_locomotion/learning/src/VisualLearner/: input_handler.py  output_handler.py  visual_predictor.py
visualoco_msgs/: CMakeLists.txt  package.xml
visualoco_msgs/msg/: Proprioception.msg  VisuaLatent.msg
