<?xml version="1.0"?>
<package format="2">
  <name>agile_locomotion</name>
  <version>0.0.0</version>
  <description>The agile_locomotion package</description>

  <maintainer email="loquercio@berkeley.edu">Antonio Loquercio</maintainer>
  <license>TODO</license>

  <author>Antonio Loquercio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>eigen_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>utils</depend>
  <depend>visualoco_msgs</depend>

  <export>

  </export>
</package>
