<?xml version="1.0"?>
<package format="2">
  <name>utils</name>
  <version>0.0.0</version>
  <description>Utils for visual navigation project</description>

  <maintainer email="loquercio@berkeley.edu">Antonio Loquercio</maintainer>

  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>image_transport</buildtool_depend>

  <depend>image_transport</depend>
  <depend>eigen_catkin</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>quadrotor_common</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
