<?xml version="0.1"?>
<package format="2">
  <name>visual_learner</name>
  <version>0.0.1</version>
  <description>Set of Packages to learn and execute visual locomotion controllers</description>

  <maintainer email="loquercio@berkeley.edu">Antonio Loquercio</maintainer>


  <license>GNU GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>


  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

  <export>

  </export>

</package>
